--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Yanqi Bao"
 description              : "Yanqi Bao's Homepage"
-repository               : "bbbbby-99/Yanqi-Bao.github.io"
+repository               : "Yanqi-Bao.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
