--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 title                    : "yanqibao"
-description              : "yanqibao's Homepage"
-repository               : "bbbbby-99/yanqibao.github.io"
+description              : "Yanqi Bao's Homepage"
+repository               : "yanqibao.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
